--- a/MachineLearningDemo/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/MachineLearningDemo/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -18,13 +18,13 @@
 </environment>
 
 <script>
-    var sentimentform = $('#sentimentform'),
+    var $sentimentform = $('#sentimentform'),
         $sentimentupload = $('#sentimentupload'),
         $loader = $('#loader'),
         $primaryButton = $('.btn-primary'),
         $removeButton = $('#remove-button');
 
-    sentimentform.on('submit', function (e) {
+    $sentimentform.on('submit', function (e) {
         e.preventDefault();
 
         $.ajax({
@@ -66,7 +66,7 @@
                 processData: false,
                 success: function (data) {
                     if (data.status == 1) {
-                        $form.show();
+                        $sentimentform.show();
                         $removeButton.show();
                         alert('Training Complete!');
                         $('#trainResult').text(data.result);
