--- a/MachineLearningDemo/Views/Shared/_Layout.cshtml
+++ b/MachineLearningDemo/Views/Shared/_Layout.cshtml
@@ -13,9 +13,71 @@
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"
               crossorigin="anonymous"
-              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"/>
+              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" />
     </environment>
     <link rel="stylesheet" href="~/css/site.css" />
+
+    <style>
+        #upload-container {
+            height: 165px;
+            align-items: center;
+            background-color: #fafafa;
+            display: inline-flex;
+            padding: 14px;
+            border-radius: 4px;
+            border: 1px silver solid;
+            position: relative;
+        }
+
+        #upload-container * {
+            margin: 0 3px;
+        }
+
+        #upload {
+            display: flex;
+        }
+
+        #loader {
+            display: none;
+            align-items: center;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: #fff;
+            border: 1px silver solid;
+            z-index: 1;
+            padding: 10px;
+            justify-content: space-between;
+            font-size: 35px;
+        }
+
+        #loader.show {
+            display: flex;
+        }
+
+        #loader::after {
+            content: "";
+            background: url(/images/tenor.gif) center no-repeat;
+            background-size: contain;
+            width: 220px;
+            height: 160px;
+        }
+
+        h1 {
+            margin-top: 50px;
+        }
+
+        h2 {
+            font-size: 25px;
+            margin-bottom: 30px;
+        }
+
+        hr {
+            margin: 50px 0;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -34,6 +96,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Semantic" asp-action="Analysis">Sentimental Analysis</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CreditCardFraudDetection" asp-action="Default">Credit Card Fraud Detection</a>
                         </li>
                         <!-- ADD MORE HERE -->
                     </ul>
