--- a/MachineLearningDemo/Views/Shared/_Layout.cshtml
+++ b/MachineLearningDemo/Views/Shared/_Layout.cshtml
@@ -92,9 +92,6 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Default">Demo Page</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Semantic" asp-action="Analysis">Sentimental Analysis</a>
                         </li>
                         <li class="nav-item">
@@ -102,6 +99,12 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="ImageClassification" asp-action="Index">Image Classification</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CamGoogle" asp-action="Capture">Google Vision</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="https://localhost:44362/" target="_blank" >Customer Segmentation</a>
                         </li>
                         <!-- ADD MORE HERE -->
                     </ul>
