--- a/CustomerSegmentation/Pages/Shared/_Layout.cshtml
+++ b/CustomerSegmentation/Pages/Shared/_Layout.cshtml
@@ -30,10 +30,16 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Default">Demo Page</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Semantic" asp-action="Analysis">Sentimental Analysis</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Semantic" asp-action="Analysis">Sentimental Analysis</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CreditCardFraudDetection" asp-action="Default">Credit Card Fraud Detection</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ImageClassification" asp-action="Index">Image Classification</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CamGoogle" asp-action="Capture">Google Vision</a>
                         </li>
                         <!-- ADD MORE HERE -->
                     </ul>
