--- a/MachineLearningDemo/wwwroot/css/styles.css
+++ b/MachineLearningDemo/wwwroot/css/styles.css
@@ -1,32 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
 
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-html{
-    background-color: #fff;
-    font:normal 16px/1.5 sans-serif;
-    color: #333;
-}
-
-h3{
-    font: normal 32px/1.5 'Open Sans', sans-serif;
-    color: #2c3e50;
-    margin: 50px 0;
-    text-align: center;
-}
-
-
-.container{
-    max-width: 500px;
-    margin: 50px auto;
-    padding: 20px;
-    background-color: #efefef;
-}
-
 .app{
     width: 100%;
     position: relative;
@@ -183,3 +156,88 @@ h3{
     }
 }
 
+.tab .nav-tabs {
+    font-family: 'Lato', sans-serif;
+    margin: 0 0 10px 0;
+    border: none;
+}
+
+    .tab .nav-tabs li a {
+        color: #444;
+        background: linear-gradient(to top right, #f9f9f9 49%,#f1f1f1 50%);
+        font-size: 18px;
+        font-weight: 800;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+        padding: 10px 20px;
+        margin-right: 10px;
+        border: none;
+        border-radius: 0;
+        box-shadow: 0 0 10px -5px rgba(0,0,0,0.5);
+        overflow: hidden;
+        z-index: 1;
+        position: relative;
+        transition: all 0.3s ease 0s;
+    }
+
+    .tab .nav-tabs li:last-child a {
+        margin-right: 0;
+    }
+
+    .tab .nav-tabs li a:hover,
+    .tab .nav-tabs li.active a {
+        color: #83ba16;
+        border-color: transparent;
+        border: none;
+    }
+
+    .tab .nav-tabs li a:before {
+        content: "";
+        background: linear-gradient(to right, #2F80ED, #56CCF2);
+        width: 100%;
+        height: 100%;
+        transform: scaleX(0);
+        transform-origin: 0 50% 0;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
+        transition: all 0.5s ease-out 0s;
+    }
+
+    .tab .nav-tabs li.active a:before,
+    .tab .nav-tabs li a:hover:before {
+        transform: scaleX(1);
+        transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
+    }
+
+.tab .tab-content {
+    color: #444;
+    background: linear-gradient(to top right, #f9f9f9 49%,#f1f1f1 50%);
+    font-size: 17px;
+    letter-spacing: 1px;
+    line-height: 30px;
+    padding: 25px 20px;
+    box-shadow: 0 0 10px -5px rgba(0,0,0,0.5);
+    position: relative;
+}
+
+    .tab .tab-content h3 {
+        font-weight: 600;
+        text-transform: uppercase;
+        margin-top: 0;
+    }
+
+@media only screen and (max-width: 767px) {
+    .tab .nav-tabs li a {
+        padding: 10px 20px;
+    }
+}
+
+@media only screen and (max-width: 479px) {
+    .tab .nav-tabs li {
+        text-align: center;
+        width: 100%;
+        margin-bottom: 15px;
+    }
+}
