--- a/MachineLearningDemo/Views/Shared/_Layout.cshtml
+++ b/MachineLearningDemo/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@{ 
+    var controllerId = ViewContext.RouteData.Values["Controller"];
+    var actionId = ViewContext.RouteData.Values["Action"];
+}
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -33,7 +38,7 @@
             margin: 0 3px;
         }
 
-        #upload {
+        #upload, #sentimentupload, #registerForm {
             display: flex;
         }
 
@@ -65,61 +70,248 @@
             height: 160px;
         }
 
-        h1 {
-            margin-top: 50px;
-        }
-
-        h2 {
-            font-size: 25px;
-            margin-bottom: 30px;
-        }
-
         hr {
             margin: 50px 0;
         }
+
+        body {
+            display: flex;
+            align-items: center;
+            min-height: 100vh;
+            overflow-x: hidden !important;
+            padding: 40px 0;
+        }
+
+        main {
+            border-radius: 8px;
+            box-shadow: 0 0 35px rgba(0,0,0,0.25);
+            position: relative;
+        }
+
+        main::after {
+            content: "";
+            position: absolute;
+            border-radius: 50%;
+            width: 100vh;
+            height: 100vh;
+            background: var(--color);
+            top: 50%;
+            left: 100%;
+            -webkit-transform: translate(-200px,-50%);
+            -moz-transform: translate(-200px,-50%);
+            transform: translate(-100px,-50%);
+            z-index: -1;
+        }
+
+        h1 {
+            margin: 0 0 24px;
+        }
+
+        h2 {
+            font-size: 24px;
+        }
+
+        .custom-nav__container {
+            background: #013a55;
+            padding-top: 40px;
+            padding-bottom: 40px;
+        }
+        
+        .custom-nav {
+            text-align: center;
+            margin-top: 40px;
+        }
+
+        .custom-nav a {
+            color: #fff;
+            text-decoration: none;
+            display: block;
+            padding: 20px 0;
+            border-top: 1px rgba(255,255,255,0.05) solid;
+        }
+
+        .custom-nav a.active {
+            color: rgba(255,255,255,0.5);
+            pointer-events: none;
+        }
+
+        .content__container {
+            padding-top: 40px;
+            padding-bottom: 40px;
+        }
+
+        ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        .tabs {
+            display: flex;
+            counter-reset: countvar;
+            text-align: center;
+            margin: 0 -15px 50px;
+            pointer-events: none;
+        }
+
+        .tabs li {
+            position: relative;
+            flex: 1;
+        }
+
+        .tabs li::before {
+            counter-increment: countvar;
+            content: counter(countvar);
+            font-size: 20px;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            background: silver;
+            color: #000;
+            margin: 0 auto;
+            position: relative;
+            z-index: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #fff;
+        }
+
+        .tabs li.active::before {
+            background: var(--color);
+            font-weight: bold;
+        }
+
+        .tabs li::after {
+            content: "";
+            width: 100%;
+            height: 10px;
+            background: silver;
+            display: block;
+            position: absolute;
+            top: 50%;
+            left: 0;
+            -webkit-transform: translateY(-50%);
+            -moz-transform: translateY(-50%);
+            transform: translateY(-50%);
+        }
+
+        .tabs li.active::after {
+            background: var(--color);
+        }
+
+        .tabs label {
+            position: absolute;
+            top: 100%;
+            left: 0;
+            width: 100%;
+            text-align: center;
+            padding-top: 10px;
+        }
+
+        .tabs li.active label {
+            font-weight: bold;
+        }
+
+        .tab--content {
+            display: none;
+            padding: 20px;
+        }
+
+        .tab--content:first-child {
+            display: block;
+        }
+
+        .btn-custom {
+            background: var(--color);
+            border-color: var(--color);
+            color: #fff;
+            outline: none !important;
+            margin-top: 50px;
+        }
+
+        .btn-inherit {
+            background: var(--color);
+            border-color: var(--color);
+            color: #fff;
+        }
+
+        #trainResult {
+            font-size: 20px;
+        }
+
+        /* THEME BASED STYLES*/
+        #Semantic-Analysis__body .content__container {
+            background: url(/images/performing-twitter-sentiment-analysis1.png) bottom right no-repeat;
+            background-size: 350px;
+        }
+
+        #Semantic-Analysis__body main {
+            --color: #6388b5;
+        }
+
+        #CreditCardFraudDetection-Default__body .content__container {
+            background: url(/images/fraud-protection.png) bottom right no-repeat;
+            background-size: 200px;
+        }
+
+        #CreditCardFraudDetection-Default__body main {
+            --color: #d4604c;
+        }
+
+        #ImageClassification-Index__body .content__container {
+            background: url(/images/pngtree-cartoon-character-classification-icon-image_1356878.png) bottom right no-repeat;
+            background-size: 200px;
+        }
+
+        #ImageClassification-Index__body main {
+            --color: #67f9f9;
+        }
+
+        #CamGoogle-Capture__body .content__container {
+            background: url(/images/logo.png) bottom right no-repeat;
+            background-size: 250px;
+        }
+
+        #CamGoogle-Capture__body main {
+            --color: #ffcf49;
+        }
     </style>
 </head>
-<body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ML.Net</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Semantic" asp-action="Analysis">Sentimental Analysis</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="CreditCardFraudDetection" asp-action="Default">Credit Card Fraud Detection</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ImageClassification" asp-action="Index">Image Classification</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="CamGoogle" asp-action="Capture">Google Vision</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" href="https://localhost:44362/" target="_blank" >Customer Segmentation</a>
-                        </li>
-                        <!-- ADD MORE HERE -->
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+<body id="@(controllerId)-@(actionId)__body">
     <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
+        <main role="main" class="row">
+            <div class="col-3 custom-nav__container">
+                <img src="~/images/logo.jpg" style="width:100%" />
+
+                <ul class="custom-nav">
+                    <li class="nav-item">
+                        <a asp-area="" asp-controller="Semantic" asp-action="Analysis" id="Semantic-Analysis">Sentimental Analysis</a>
+                    </li>
+                    <li class="nav-item">
+                        <a asp-area="" asp-controller="CreditCardFraudDetection" asp-action="Default" id="CreditCardFraudDetection-Default">Credit Card Fraud Detection</a>
+                    </li>
+                    <li class="nav-item">
+                        <a asp-area="" asp-controller="ImageClassification" asp-action="Index" id="ImageClassification-Index">Image Classification</a>
+                    </li>
+                    <li class="nav-item">
+                        <a asp-area="" asp-controller="CamGoogle" asp-action="Capture" id="CamGoogle-Capture">Google Vision</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="https://localhost:44362/" target="_blank">Customer Segmentation</a>
+                    </li>
+                    <!-- ADD MORE HERE -->
+                </ul>
+            </div>
+
+            <div class="col-9 content__container">
+                @RenderBody()
+            </div>
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
+    <footer class="border-top footer text-muted" style="display: none">
+        <div class="container-fluid">
 
         </div>
     </footer>
@@ -147,6 +339,10 @@
     @RenderSection("Scripts", required: false)
 
     <script>
+        var currentTabIndex = 0,
+            tabButtons,
+            tabContents;
+
         $(document).ready(function () {
             $("#formFile").change(function () {
                 if (typeof (FileReader) != "undefined") {
@@ -167,8 +363,23 @@
                     alert("This browser does not support HTML5 FileReader.");
                 }
             });
+
+            tabButtons = $('.tabs li');
+            tabContents = $('.tabs--content li');
+
+            $('.btn-custom').on('click', function () {
+                NextStep();
+            });
+
+            $("a#@controllerId-@actionId").addClass("active");
         });
 
+        var NextStep = function () {
+            tabContents.eq(currentTabIndex++).hide();
+            
+            tabButtons.eq(currentTabIndex).addClass('active');
+            tabContents.eq(currentTabIndex).show();
+        }
     </script>
 </body>
 </html>
