--- a/CustomerSegmentation/Pages/Index.cshtml
+++ b/CustomerSegmentation/Pages/Index.cshtml
@@ -7,90 +7,94 @@
     var predictedCustomers = (List<MachineLearning.Models.PredictionResult>)ViewData["PredictedCustomers"];
     string avgScore = (string)ViewData["ClusteringMetrics"];
 }
+<div class="row">
+    <div class="col-12">
+        <section>
+            <h1>Customer Segmentation</h1>
+        </section>
 
-<style>
-    #upload-container {
-        height: 165px;
-        align-items: center;
-        background-color: #fafafa;
-        display: inline-flex;
-        padding: 14px;
-        border-radius: 4px;
-        border: 1px silver solid;
-        position: relative;
-    }
+        <ul class="tabs">
+            <li class="active">
+                <label>Building the Model</label>
+            </li>
 
-        #upload-container * {
-            margin: 0 3px;
-        }
+            <li>
+                <label>Training the Model</label>
+            </li>
 
-    #upload {
-        display: flex;
-    }
+            <li>
+                <label>Evaluate the Model</label>
+            </li>
 
-    #loader {
-        display: none;
-        align-items: center;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: #fff;
-        border: 1px silver solid;
-        z-index: 1;
-        padding: 10px;
-        justify-content: space-between;
-        font-size: 35px;
-    }
+            <li>
+                <label>Consuming the Model</label>
+            </li>
+        </ul>
 
-        #loader.show {
-            display: flex;
-        }
+        <ul class="tabs--content">
+            <li class="tab--content">
+                <p>
+                    1. Prepare the data and split data for training and tests.<br />
+                    <a href="javascript:void(0);">Training Data</a><br />
+                    <a href="javascript:void(0);">Test Data</a>
+                    <br />
+                    <br />
+                    2. Creating an estimator and transforming the data<br />
+                    3. Choosing a trainer. In this case, a Binary Classification training. Binary or binomial classification is the task of classifying the elements of a given set into two groups (predicting which group each one belongs to)
+                </p>
 
-        #loader::after {
-            content: "";
-            background: url(/images/tenor.gif) center no-repeat;
-            background-size: contain;
-            width: 220px;
-            height: 160px;
-        }
+                <button class="btn btn-custom">Next</button>
+            </li>
 
-    h1 {
-        margin-top: 50px;
-    }
+            <li class="tab--content">
+                <p>Training the model is a process of running the chosen algorithm on a training data (with known fraud values) to tune the parameters of the model.</p>
 
-    h2 {
-        font-size: 25px;
-        margin-bottom: 30px;
-    }
+                <div id="upload-container">
+                    <form method="post" action="" enctype="multipart/form-data">
+                        <input type="file" name="file" class="form-control" id="fileUpload" style="padding: 3px" /><br />
+                        <input type="submit" class="btn btn-secondary" name="train" value="Train Data" />
+                    </form>
+                    <div id="loader">Training: </div>
+                </div>
+                <br />
+                <button class="btn btn-custom">Next</button>
+            </li>
 
-    hr {
-        margin: 50px 0;
-    }
-</style>
+            <li class="tab--content">
+                <p>We need this step to conclude how accurate our model is.</p>
+                @if (!string.IsNullOrEmpty(avgScore))
+                {
+                    <h2 id="trainResult">Avg Score : @avgScore</h2>
+                }
+                <button class="btn btn-custom">Next</button>
+            </li>
 
-<h1>Customer Segmentation</h1>
-<hr />
-<h2>Model Training</h2>
-<div id="upload-container">
-    <form method="post" action="" enctype="multipart/form-data">
-        <input type="file" name="file" class="form-control" id="fileUpload" style="padding: 3px" /><br />
-        <input type="submit" class="btn btn-secondary" name="train" value="Train Data" />
-        <input type="submit" class="btn btn-primary" name="predict" value="Predict data" />
-    </form>
-    @if (!string.IsNullOrEmpty(avgScore))
-    {
-        <h2 id="trainResult">Avg Score : @avgScore</h2>
-    }
-    @*<button id="remove-button" class="btn btn-info">Remove Model</button>
+            <li class="tab--content">
+                <p>After the model is trained, you can use the Predict() API to predict the sentiment for new sample text.</p>
 
-        <div id="loader">Training: </div>
-        <br />
-        <h2 id="trainResult"></h2>*@
+                <div class="row">
+                    <div class="col-md-4">
+                        <form method="post" action="" enctype="multipart/form-data">
+                            <input type="file" name="file" class="form-control" id="fileUpload" style="padding: 3px" /><br />
+                            <input type="submit" class="btn btn-primary" name="predict" value="Predict data" />
+                        </form>
+                        
+                    </div>
+                    <div id="result" style="display:none" class="col-md-offset-4 col-md-4">
+
+                        <h2>Result</h2>
+
+                        <h3 id="predictionh">Prediction: <span id="prediction"></span></h3>
+
+                        <h3>Score:<span id="score"></span></h3>
+
+
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </div>
 </div>
-
-<hr />
 
 
     <br />
@@ -103,7 +107,7 @@
             }
             else if (cluster == 2)
             {
-                return "Sleeping, Regular, VIP with biggest monetary value (our VIP customers)";
+                return "Regular, VIP with biggest monetary value (our VIP customers)";
             }
             else if (cluster == 3)
             {
