--- a/MachineLearningDemo/Views/CreditCardFraudDetection/Default.cshtml
+++ b/MachineLearningDemo/Views/CreditCardFraudDetection/Default.cshtml
@@ -68,8 +68,8 @@
             <li class="tab--content">
                 <p>
                     1. Prepare the data and split data for training and tests.<br />
-                    <a href="javascript:void(0);">Training Data</a><br />
-                    <a href="javascript:void(0);">Test Data</a>
+                    <a href="~/training-files/trainData.csv">Training Data</a><br />
+                    <a href="~/training-files/testData.csv">Test Data</a>
                     <br />
                     <br />
                     2. Creating an estimator and transforming the data<br />
@@ -96,14 +96,14 @@
                 @if (FileHelper.ModelExists)
                 {
                 <div>
-                    <button class="btn btn-custom">Next</button>
+                    <button class="btn btn-custom" data-skip="1">Skip Training</button>
                 </div>
                 }
             </li>
 
             <li class="tab--content">
                 <p>We need this step to conclude how accurate our model is.</p>
-                <h2 id="trainResult"></h2>
+                <h2 id="trainResult">Prediction Accuracy: <span></span></h2>
 
                 <button class="btn btn-custom">Next</button>
             </li>
@@ -149,7 +149,7 @@
                                         }
 
                                         <td>@fraud.Amount</td>
-                                        <td><button>Predict</button></td>
+                                        <td><button>Populate</button></td>
                                     </tr>
                                 }
                             }
@@ -189,7 +189,7 @@
                                         }
 
                                         <td>@valid.Amount</td>
-                                        <td><button>Predict</button></td>
+                                        <td><button>Populate</button></td>
                                     </tr>
                                 }
                             }
