update image classification

--- a/MachineLearningDemo/Views/ImageClassification/Index.cshtml
+++ b/MachineLearningDemo/Views/ImageClassification/Index.cshtml
@@ -4,14 +4,14 @@
 }
 
 <h1>Image Classification</h1>
-@*<hr />
-<h2>Model Training</h2>*@
-@*<div id="upload-container">
+<hr />
+<h2>Model Training</h2>
+<div id="upload-container">
     <form id="uploadTraining" enctype="multipart/form-data">
         <input type="file" name="file" class="form-control" id="fileUpload" style="padding: 3px" /><br />
         <button id="upload-button" class="btn btn-secondary">Upload!</button>
     </form>
-</div>*@
+</div>
 <hr />
 
 @using (Html.BeginForm("Index", "ImageClassification", FormMethod.Post,
